# playground_native_with_flutter

./: README.md  cJSON.config.yaml  libhello.config.yaml  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json
.github/workflows/: main.yaml
.tours/: event_channel.tour  ffi.tour  method-channel.tour  pigeon.tour
app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: ContactsApiImpl.swift  ContactsService.swift  Info.plist  TimeHandler.swift
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/api/: contacts_api.dart
app/lib/ffi/: libhello_generated_bindings.dart
app/lib/views/: ffi_view.dart  method_channel_view.dart  pigeon_view.dart
app/native/hello/: hello.c  hello.h
app/pigeons/: contacts_api.dart
apps/batterylevel/: README.md  pubspec.yaml
apps/batterylevel/lib/: main.dart
apps/network_connectivity/: README.md  pubspec.yaml
apps/network_connectivity/android/app/: build.gradle
apps/network_connectivity/lib/: main.dart
assets/: example.json
ffigen/: fibonacci.config.yaml  libhello.config.yaml
ios/Runner/: AppDelegate.swift  ContactsApi.swift  ExampleApi.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: ffi_loader.dart  main.dart
lib/api/: example_api.dart
lib/ffi/: cjson_generated_bindings.dart  fibonacci_generated_bindings.dart
lib/views/: event_channel_view.dart  ffi_view.dart  method_channel_view.dart  pigeon_view.dart
native/cJSON/: CMakeLists.txt  README.md
native/fibonacci/: CMakeLists.txt  README.md  fibonacci.c  fibonacci.h
native/hello/: CMakeLists.txt  README.md  hello.h
pigeons/: example_api.dart
(+10 files in other folders)
